package com.ifmo.hatchery.model.system;

public enum Gender {MALE, FEMALE
}
