package com.ifmo.hatchery.model.system;

public enum Stage {
    FERTILIZATION, CHOOSE_CASTE, BOKANOVSKIY, ADD_SKILLS, FINISH
}
