package com.ifmo.hatchery.model.system;


public enum TaskLockStatus {
    LOCKED, FAILED
}
