@startuml

title __SYSTEM's Class Diagram__\n

  namespace com.ifmo.hatchery {
    namespace model.system {
      enum BioState {
        NOT_USE
        USE
      }
    }
  }
  

  namespace com.ifmo.hatchery {
    namespace model.system {
      class com.ifmo.hatchery.model.system.Biomaterial {
          - id : Long
          + Biomaterial()
          + equals()
          + getBioState()
          + getDonor()
          + getFormSting()
          + getId()
          + getType()
          + hashCode()
          + setBioState()
          + setDonor()
          + setId()
          + setType()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.ifmo.hatchery {
    namespace model.system {
      enum BiomaterialType {
        FEMALE
        MALE
      }
    }
  }
  

  namespace com.ifmo.hatchery {
    namespace model.system {
      enum Caste {
        ALPHA
        BETA
        DELTA
        EPSILON
        GAMMA
        maxAmount
        minAmount
      }
    }
  }
  

  namespace com.ifmo.hatchery {
    namespace model.system {
      enum Gender {
        FEMALE
        MALE
      }
    }
  }
  

  namespace com.ifmo.hatchery {
    namespace model.system {
      class com.ifmo.hatchery.model.system.OrderX {
          - id : Long
          - skills : Collection<Skill>
          + OrderX()
          + equals()
          + getCaste()
          + getCustomer()
          + getId()
          + getSkillNames()
          + getSkills()
          + getTask()
          + hashCode()
          + setCaste()
          + setCustomer()
          + setId()
          + setSkills()
          + setTask()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.ifmo.hatchery {
    namespace model.system {
      class com.ifmo.hatchery.model.system.Skill {
          - id : Long
          - name : String
          - skills : Collection<Task>
          + Skill()
          + equals()
          + getId()
          + getName()
          + getSkills()
          + hashCode()
          + setId()
          + setName()
          + setSkills()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.ifmo.hatchery {
    namespace model.system {
      enum Stage {
        ADD_SKILLS
        BOKANOVSKIY
        CHOOSE_CASTE
        FERTILIZATION
        FINISH
      }
    }
  }
  

  namespace com.ifmo.hatchery {
    namespace model.system {
      class com.ifmo.hatchery.model.system.Task {
          - amount : long
          - id : Long
          - skills : Collection<Skill>
          + Task()
          + equals()
          + getAmount()
          + getBiomaterialFemale()
          + getBiomaterialMale()
          + getCaste()
          + getId()
          + getLockStatus()
          + getLockUser()
          + getOrder()
          + getSkills()
          + getStage()
          + hashCode()
          + setAmount()
          + setBiomaterialFemale()
          + setBiomaterialMale()
          + setCaste()
          + setId()
          + setLockStatus()
          + setLockUser()
          + setOrder()
          + setSkills()
          + setStage()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.ifmo.hatchery {
    namespace model.system {
      enum TaskLockStatus {
        FAILED
        LOCKED
      }
    }
  }
  

  com.ifmo.hatchery.model.system.Biomaterial o-- com.ifmo.hatchery.model.system.BioState : bioState
  com.ifmo.hatchery.model.system.Biomaterial o-- com.ifmo.hatchery.model.auth.UserX : donor
  com.ifmo.hatchery.model.system.Biomaterial o-- com.ifmo.hatchery.model.system.BiomaterialType : type
  com.ifmo.hatchery.model.system.OrderX o-- com.ifmo.hatchery.model.system.Caste : caste
  com.ifmo.hatchery.model.system.OrderX o-- com.ifmo.hatchery.model.auth.UserX : customer
  com.ifmo.hatchery.model.system.OrderX o-- com.ifmo.hatchery.model.system.Task : task
  com.ifmo.hatchery.model.system.Task o-- com.ifmo.hatchery.model.system.Biomaterial : biomaterialFemale
  com.ifmo.hatchery.model.system.Task o-- com.ifmo.hatchery.model.system.Biomaterial : biomaterialMale
  com.ifmo.hatchery.model.system.Task o-- com.ifmo.hatchery.model.system.Caste : caste
  com.ifmo.hatchery.model.system.Task o-- com.ifmo.hatchery.model.system.TaskLockStatus : lockStatus
  com.ifmo.hatchery.model.system.Task o-- com.ifmo.hatchery.model.auth.UserX : lockUser
  com.ifmo.hatchery.model.system.Task o-- com.ifmo.hatchery.model.system.OrderX : order
  com.ifmo.hatchery.model.system.Task o-- com.ifmo.hatchery.model.system.Stage : stage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
